[package]
name = "pushkind-sms"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.10"
aws-sdk-sns = "1.90.0"
tokio = { version = "1.48.0", features = ["full"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
log = "0.4.27"
zmq = "0.10.0"
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
phonenumber = "0.3"
pushkind-common = { git = "https://github.com/pushkindt/pushkind-common.git", features = [
    "sms",
], branch = "main" }
